# golf-backend

./: .flake8  .gitignore  deploy.sh  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy.yml
golfbackend/: manage.py  uwsgi.ini
golfbackend/golf/: admin.py  models.py  serializers.py  urls.py  views.py
golfbackend/golf/management/commands/: create_fake_tee_times.py  delete_old_tee_times.py  disable_golf_clubs.py  scrape_clubs_for_courses.py  scrape_golf_clubs.py  scrape_tee_times.py  set_golf_club_locations.py
golfbackend/golf/migrations/: 0001_initial.py  0002_alter_golfclub_latitude_alter_golfclub_longitude.py  0003_alter_golfcourse_golf_club.py  0004_remove_teetime_tee_time_id.py  0005_golfclub_created_golfcourse_created_and_more.py  0006_golfboxcookie.py  0007_alter_golfclub_name.py  0008_alter_golfcourse_name.py  0009_golfclub_disabled.py  0010_golfcourse_price_in_ore.py  0011_remove_golfcourse_price_in_ore_teetime_price_in_ore.py  0012_alter_teetime_price_in_ore.py  0013_searchquery.py  0014_location.py  0015_alter_teetime_golf_course.py
golfbackend/golf/utils/: openai_utils.py  query_utils.py  scraping.py
golfbackend/golfbackend/: asgi.py  settings.py  urls.py  uwsgi.ini  wsgi.py
